@@ -8,7 +8,7 @@ const char * fallback_ui_file =
 "      <menuitem action='pause-torrent'/>\n"
 "      <menuitem action='verify-torrent'/>\n"
 "      <menuitem action='remove-torrent'/>\n"
-"      <menuitem action='show-torrent-properties'/>\n"
+"      <menuitem action='show-torrent-details'/>\n"
 "      <separator/>\n"
 "      <menuitem action='create-torrent'/>\n"
 "      <separator/>\n"
@@ -34,11 +34,11 @@ const char * fallback_ui_file =
 "    <toolitem action='pause-torrent'/>\n"
 "    <toolitem action='remove-torrent'/>\n"
 "    <separator/>\n"
-"    <toolitem action='show-torrent-properties'/>\n"
+"    <toolitem action='show-torrent-details'/>\n"
 "  </toolbar>\n"
 "\n"
 "  <popup name='main-window-popup'>\n"
-"    <menuitem action='show-torrent-properties'/>\n"
+"    <menuitem action='show-torrent-details'/>\n"
 "    <separator/>\n"
 "    <menuitem action='start-torrent'/>\n"
 "    <menuitem action='pause-torrent'/>\n"
